Initial attempt at ls-colors libexec

--- a/os/Darwin/bin/a.in
+++ b/os/Darwin/bin/a.in
@@ -1,3 +1,7 @@
 #! @SHELL@
 
+if test "x${LS_COLORS-unset}" = xunset; then
+  . /Users/now/opt/bin/ls-colors
+  export LS_COLORS
+fi
 exec gls --color=auto "$@"
