Update Total Commander configuration

--- a/os/Cygwin/GHISLER/wincmd.ini
+++ b/os/Cygwin/GHISLER/wincmd.ini
@@ -214,11 +214,6 @@ MarkColor=-1
 CursorColor=6773579
 CursorText=-1
 
-ColorFilter1=>Link
-ColorFilter1Color=12628096
-ColorFilter2=>Uninteresting
-ColorFilter2Color=12632256
-
 [Confirmation]
 DeleteDirs=0
 OverwriteFiles=0
@@ -322,14 +317,11 @@ Registry=%$APPDATA%\GHISLER\plugins\wfx\Registry\Registry.wfx
 1=%$APPDATA%\GHISLER\plugins\wlx\gswlx\gswlx.wlx
 1_detect="MULTIMEDIA & (EXT="PS" | EXT="PRN" | EXT="EPS" | EXT="AI" | EXT="PDF" | EXT = "PFB") | ([0]="Å" & [1]="Ð" & [2]="Ó" & [3]="Æ") | ([0]="%" & [1]="!")"
 
-[searches]
-RedirectSection=%$APPDATA%\GHISLER\work.ini
-
 [DirMenu]
 RedirectSection=%$APPDATA%\GHISLER\work.ini
 
 [Alias]
-RedirectSection=%$APPDATA%\GHISLER\work.ini
+ln=cm_CreateShortcut
 
 [SyncOptions]
 RedirectSection=%$APPDATA%\GHISLER\work.ini
