--- a/git/config
+++ b/git/config
@@ -25,3 +25,5 @@
         tool = vimdiff3
 [mergetool.vimdiff3]
         cmd = vim -d -c 'wincmd J' "$MERGED" "$LOCAL" "$BASE" "$REMOTE"
+[push]
+        default = simple
