--- a/bin/e.in
+++ b/bin/e.in
@@ -1,12 +1,12 @@
 #! @SHELL@
 
 usage () {
-  printf 'Usage: %s [FILE...]\n' "expr "//$0" : '.*/\(.*\)'"
+  printf 'Usage: %s [--] [FILE...]\n' "expr "//$0" : '.*/\(.*\)'" >&2
   exit 1
 }
 
 warn () {
-  printf '%s: %s\n' "`expr "//$0" : '.*/\(.*\)'`" "$*"
+  printf '%s: %s\n' "`expr "//$0" : '.*/\(.*\)'`" "$*" >&2
 }
 
 die () {
@@ -36,7 +36,7 @@ test -t 0 && exec emacsclient "$@"
     test -n "$d" && test -d "$d"; } ||
   { d=$TMPDIR/e$$$RANDOM; (umask 077 && mkdir "$d") 2>/dev/null; } ||
   die "can’t create temporary directory"
-trap 'rm -rf "$d"' 0 1 2 13 15
+trap 'rm -rf "$d"' 0
 t=$d/stdin
 cat > "$t" || exit 1
 exec emacsclient "$@" "$t"
