--- a/zsh/zlogin.in
+++ b/zsh/zlogin.in
@@ -1,7 +1,3 @@
-if [[ -z $SSH_AUTH_SOCK ]] && whence keychain >/dev/null; then
-  eval $(keychain --eval --quiet id_rsa)
-fi
-
+test -z $SSH_AUTH_SOCK && eval `@KEYCHAIN@ --eval --quiet id_rsa`
 limit coredumpsize 30m 2>/dev/null
-
 @DTACH@ -A "@dtachsession@" -Ez zsh
