--- a/zsh/zshrc.in
+++ b/zsh/zshrc.in
@@ -47,15 +47,15 @@ zstyle ':completion:*:*:kill:*:*' menu selection
 autoload -U forward-word-match backward-word-match \
             backward-kill-word-match
 
-for command in cd-to-alternate-directory foreground-or-list-choices \
-  history-beginning-search-menu insert-composed-char \
-  up-directory vi-cmd-mode-silently \
-  yank-clipboard; do
-  autoload -U $command
-  zle -N $command
-done
-
-unset command
+function auto-zle () { autoload -U $1; zle -N $1; }
+auto-zle cd-to-alternate-directory
+auto-zle foreground-or-list-choices
+auto-zle history-beginning-search-menu
+auto-zle insert-composed-char
+auto-zle up-directory
+auto-zle vi-cmd-mode-silently
+auto-zle yank-clipboard
+unfunction auto-zle
 
 zle -N backward-kill-to-space-or-/ backward-kill-word-match
 zstyle ':zle:backward-kill-to-space-or-/' word-chars '*?_-.[]~=&;!#$%^(){}<>:@,\\'
