--- a/zsh/zshrc.in
+++ b/zsh/zshrc.in
@@ -95,7 +95,7 @@ bindkey \
   ' ' magic-space
 bindkey -r '^['
 
-autoload -U cdr zargs zcalc hc up urlify
+autoload -U cdr zargs zcalc hc up
 
 alias h='fc -lfiD'
 
