--- a/zsh/zshrc.in
+++ b/zsh/zshrc.in
@@ -11,7 +11,7 @@ setopt completeinword nolistambiguous nolisttypes \
        nobeep
 
 if [[ $TERM != dumb ]]; then
-  PS1='%(?..; \$?=%9F%?%f)${SSH_CONNECTION:+; ssh %M}; cd %~; '
+  PS1='%(?..; (exit %9F%?%f%))${SSH_CONNECTION:+; ssh %M}; cd %~; '
   PS2='${(l|$((2 * ${(w)#${(%%):-%_}}))|)}'
   PS3='Your selection: '
   PS4='+%N:%i: '
