--- a/bin/clipboard.in
+++ b/bin/clipboard.in
@@ -4,7 +4,7 @@ libexecdir=@libexecdir@
 
 if test $# -gt 0; then
   printf '%s' "$*" | $libexecdir/clipboard-put
-elif test -t 0; then
+elif test -t 0 || test x"`find -H /dev/fd/0 -type p -o -type f`" = x; then
   exec $libexecdir/clipboard-get
 else
   exec $libexecdir/clipboard-put
