Allow Nowmacs to take arguments

--- a/os/Darwin/bin/Nowmacs.scpt.in
+++ b/os/Darwin/bin/Nowmacs.scpt.in
@@ -1,10 +1,15 @@
-try
-  set frameVisible to do shell script "/Applications/MacPorts/Emacs.app/Contents/MacOS/bin/emacsclient -e '(<= 2 (length (visible-frame-list)))'"
-  if frameVisible is not "t" then
+on open of finderObjects
+  try
+    set frameVisible to do shell script "/Applications/MacPorts/Emacs.app/Contents/MacOS/bin/emacsclient -e '(<= 2 (length (visible-frame-list)))'"
+    if frameVisible is not "t" then
+      do shell script "/Applications/MacPorts/Emacs.app/Contents/MacOS/bin/emacsclient -c -n"
+    end if
+  on error
+    do shell script "eval `/usr/libexec/path_helper -s` && . @xdgconfighomezshdir@/.zprofile && /Applications/MacPorts/Emacs.app/Contents/MacOS/Emacs  --daemon"
     do shell script "/Applications/MacPorts/Emacs.app/Contents/MacOS/bin/emacsclient -c -n"
-  end if
-on error
-  do shell script "eval `/usr/libexec/path_helper -s` && . @xdgconfighomezshdir@/.zprofile && /Applications/MacPorts/Emacs.app/Contents/MacOS/Emacs  --daemon"
-  do shell script "/Applications/MacPorts/Emacs.app/Contents/MacOS/bin/emacsclient -c -n"
-end try
+  end try
+  repeat with i in (finderObjects)
+    do shell script "/Applications/MacPorts/Emacs.app/Contents/MacOS/bin/emacsclient -n " & quoted form of POSIX path of i
+  end repeat
+end open
 tell application "Emacs" to activate
