Add js-mode configuration

--- a/Makefile.in
+++ b/Makefile.in
@@ -277,6 +277,7 @@ provided_elcs = \
 	emacs.d/delayed-inits/ido.elc \
 	emacs.d/delayed-inits/info.elc \
 	emacs.d/delayed-inits/ispell.elc \
+	emacs.d/delayed-inits/js.elc \
 	emacs.d/delayed-inits/lisp-mode.elc \
 	emacs.d/delayed-inits/magit.elc \
 	emacs.d/delayed-inits/make-mode.elc \
