Move out files variables

--- a/Makefile.in
+++ b/Makefile.in
@@ -108,13 +108,13 @@ zshistory = @zshistory@
 all: diff
 
 $(srcdir)/configure: configure.ac
-	cd $(srcdir) && autoconf
+	$(V_GEN)cd $(srcdir) && autoconf
 
 Makefile: Makefile.in config.status
-	./config.status
+	$(V_GEN)./config.status
 
 config.status: configure
-	./config.status --recheck
+	$(V_GEN)./config.status --recheck
 
 # patch, target
 define PATCH_template_file
@@ -270,6 +270,7 @@ provided_elcs = \
 	emacs.d/delayed-inits/dired.elc \
 	emacs.d/delayed-inits/dired-aux.elc \
 	emacs.d/delayed-inits/evil.elc \
+	emacs.d/delayed-inits/files.elc \
 	emacs.d/delayed-inits/flx-ido.elc \
 	emacs.d/delayed-inits/grep.elc \
 	emacs.d/delayed-inits/hideshow.elc \
